2001-10-05  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/net.cdl (CYGPKG_NET_CFLAGS_ADD): Define __INSIDE_NET within
	this package to allow segregation of definitions only relevant for
	internal consumption, and definitions allowable for external
	consumption.

	* include/lib/libkern/libkern.h: Conditionalize on __INSIDE_NET.

2001-10-04  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/net.cdl (CYGHWR_NET_DRIVER_ETH0): Make flavor bool so it isn't
	defined when 0.
	(CYGHWR_NET_DRIVER_ETH0): Ditto.

2001-10-04  Hugo Tyson  <hmt@redhat.com>

	* src/lib/dhcp_support.c: Some conditional compilation tags were
	wrong vis a vis ETH1 versus ETH0.  Thanks to "Simon"
	<simoncc@ms46.url.com.tw> for spotting it.

2001-10-04  Jesper Skov  <jskov@redhat.com>

	* tests/multi_lo_select.c (cyg_user_start): Added CYG_TEST_INIT
	call.
	* tests/ping_lo_test.c (cyg_start): Same.
	* tests/tcp_lo_test.c (cyg_start): Same.
	* tests/udp_lo_test.c (cyg_start): Same.
	* tests/tcp_lo_select.c (cyg_start): Same.

2001-09-28  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/net.cdl: Tell isoinfra we support getproto* and getserv*
	NS functionality.
	* include/netdb.h: Move to...
	* include/net/netdb.h: ...here.

2001-09-25  Jesper Skov  <jskov@redhat.com>

	* cdl/net.cdl: Don't build tests/nc_test_master as it's a host
	side tool.

	* src/lib/getserv.c: Added domain service.

	* include/netdb.h: Moved getbyhost()/getbyaddr() declarations and
	hostent struct definition to the DNS package. 

	* src/lib/gethost.c: Removed.

	* cdl/net.cdl: Removed gethost.c (replaced by proper
	implementation in CYGPKG_NS_DNS).

2001-09-17  Hugo Tyson  <hmt@redhat.com>
2001-09-17  Andrew Lunn <Andrew.Lunn@ascom.ch>

	* src/sys/net/if_bridge.c (bridge_broadcast): Fix a null pointer
	deference.  Supporting VLANs, it seems that during the net_init()
	function, it sends a packet to the bridge with the source
	interface being NULL.  Stats counting assumed otherwise.
